markup/emark_parser.go
// Code generated from emark.g4 by ANTLR 4.9. DO NOT EDIT.

package parser // emark

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'<block '", "'</block>'", "'rows='", "'columns='", "'<row>'", "'</row>'",
	"'<column'", "'</column>'", "'walign'", "'halign'", "'bgcolor'", "'width'",
	"", "", "'textcolor'", "' '", "'>'", "'<'",
}
var symbolicNames = []string{
	"", "Block", "BlockEnd", "Rows", "Columns", "Row", "RowEnd", "Column",
	"ColumnEnd", "Walign", "Halign", "BgColor", "Width", "Ctx", "Number", "TextColor",
	"Spacebar", "CloseTag", "OpenTag", "WS",
}

var ruleNames = []string{
	"program", "tag", "rowop", "blop", "colop", "ctx",
}

type emarkParser struct {
	*antlr.BaseParser
}

// NewemarkParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *emarkParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewemarkParser(input antlr.TokenStream) *emarkParser {
	this := new(emarkParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "emark.g4"

	return this
}

// emarkParser tokens.
const (
	emarkParserEOF       = antlr.TokenEOF
	emarkParserBlock     = 1
	emarkParserBlockEnd  = 2
	emarkParserRows      = 3
	emarkParserColumns   = 4
	emarkParserRow       = 5
	emarkParserRowEnd    = 6
	emarkParserColumn    = 7
	emarkParserColumnEnd = 8
	emarkParserWalign    = 9
	emarkParserHalign    = 10
	emarkParserBgColor   = 11
	emarkParserWidth     = 12
	emarkParserCtx       = 13
	emarkParserNumber    = 14
	emarkParserTextColor = 15
	emarkParserSpacebar  = 16
	emarkParserCloseTag  = 17
	emarkParserOpenTag   = 18
	emarkParserWS        = 19
)

// emarkParser rules.
const (
	emarkParserRULE_program = 0
	emarkParserRULE_tag     = 1
	emarkParserRULE_rowop   = 2
	emarkParserRULE_blop    = 3
	emarkParserRULE_colop   = 4
	emarkParserRULE_ctx     = 5
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = emarkParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = emarkParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) Block() antlr.TerminalNode {
	return s.GetToken(emarkParserBlock, 0)
}

func (s *ProgramContext) Rows() antlr.TerminalNode {
	return s.GetToken(emarkParserRows, 0)
}

func (s *ProgramContext) Spacebar() antlr.TerminalNode {
	return s.GetToken(emarkParserSpacebar, 0)
}

func (s *ProgramContext) Columns() antlr.TerminalNode {
	return s.GetToken(emarkParserColumns, 0)
}

func (s *ProgramContext) CloseTag() antlr.TerminalNode {
	return s.GetToken(emarkParserCloseTag, 0)
}

func (s *ProgramContext) BlockEnd() antlr.TerminalNode {
	return s.GetToken(emarkParserBlockEnd, 0)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(emarkParserEOF, 0)
}

func (s *ProgramContext) AllNumber() []antlr.TerminalNode {
	return s.GetTokens(emarkParserNumber)
}

func (s *ProgramContext) Number(i int) antlr.TerminalNode {
	return s.GetToken(emarkParserNumber, i)
}

func (s *ProgramContext) AllTag() []ITagContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITagContext)(nil)).Elem())
	var tst = make([]ITagContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITagContext)
		}
	}

	return tst
}

func (s *ProgramContext) Tag(i int) ITagContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITagContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITagContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *emarkParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, emarkParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(12)
		p.Match(emarkParserBlock)
	}
	{
		p.SetState(13)
		p.Match(emarkParserRows)
	}
	p.SetState(15)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == emarkParserNumber {
		{
			p.SetState(14)
			p.Match(emarkParserNumber)
		}

		p.SetState(17)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(19)
		p.Match(emarkParserSpacebar)
	}
	{
		p.SetState(20)
		p.Match(emarkParserColumns)
	}
	p.SetState(22)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == emarkParserNumber {
		{
			p.SetState(21)
			p.Match(emarkParserNumber)
		}

		p.SetState(24)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(26)
		p.Match(emarkParserCloseTag)
	}
	p.SetState(30)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<emarkParserBlock)|(1<<emarkParserRow)|(1<<emarkParserColumn)|(1<<emarkParserCtx)|(1<<emarkParserNumber)|(1<<emarkParserSpacebar))) != 0 {
		{
			p.SetState(27)
			p.Tag()
		}

		p.SetState(32)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(33)
		p.Match(emarkParserBlockEnd)
	}
	{
		p.SetState(34)
		p.Match(emarkParserEOF)
	}

	return localctx
}

// ITagContext is an interface to support dynamic dispatch.
type ITagContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTagContext differentiates from other interfaces.
	IsTagContext()
}

type TagContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTagContext() *TagContext {
	var p = new(TagContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = emarkParserRULE_tag
	return p
}

func (*TagContext) IsTagContext() {}

func NewTagContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TagContext {
	var p = new(TagContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = emarkParserRULE_tag

	return p
}

func (s *TagContext) GetParser() antlr.Parser { return s.parser }

func (s *TagContext) Rowop() IRowopContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRowopContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRowopContext)
}

func (s *TagContext) AllCtx() []ICtxContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICtxContext)(nil)).Elem())
	var tst = make([]ICtxContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICtxContext)
		}
	}

	return tst
}

func (s *TagContext) Ctx(i int) ICtxContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICtxContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICtxContext)
}

func (s *TagContext) Blop() IBlopContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlopContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBlopContext)
}

func (s *TagContext) Colop() IColopContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IColopContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IColopContext)
}

func (s *TagContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TagContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TagContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.EnterTag(s)
	}
}

func (s *TagContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.ExitTag(s)
	}
}

func (p *emarkParser) Tag() (localctx ITagContext) {
	localctx = NewTagContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, emarkParserRULE_tag)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.SetState(62)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 7, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		p.SetState(39)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<emarkParserCtx)|(1<<emarkParserNumber)|(1<<emarkParserSpacebar))) != 0 {
			{
				p.SetState(36)
				p.Ctx()
			}

			p.SetState(41)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(42)
			p.Rowop()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		p.SetState(46)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<emarkParserCtx)|(1<<emarkParserNumber)|(1<<emarkParserSpacebar))) != 0 {
			{
				p.SetState(43)
				p.Ctx()
			}

			p.SetState(48)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(49)
			p.Blop()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		p.SetState(53)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<emarkParserCtx)|(1<<emarkParserNumber)|(1<<emarkParserSpacebar))) != 0 {
			{
				p.SetState(50)
				p.Ctx()
			}

			p.SetState(55)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(56)
			p.Colop()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		p.SetState(58)
		p.GetErrorHandler().Sync(p)
		_alt = 1
		for ok := true; ok; ok = _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
			switch _alt {
			case 1:
				{
					p.SetState(57)
					p.Ctx()
				}

			default:
				panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			}

			p.SetState(60)
			p.GetErrorHandler().Sync(p)
			_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext())
		}

	}

	return localctx
}

// IRowopContext is an interface to support dynamic dispatch.
type IRowopContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRowopContext differentiates from other interfaces.
	IsRowopContext()
}

type RowopContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRowopContext() *RowopContext {
	var p = new(RowopContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = emarkParserRULE_rowop
	return p
}

func (*RowopContext) IsRowopContext() {}

func NewRowopContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RowopContext {
	var p = new(RowopContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = emarkParserRULE_rowop

	return p
}

func (s *RowopContext) GetParser() antlr.Parser { return s.parser }

func (s *RowopContext) Row() antlr.TerminalNode {
	return s.GetToken(emarkParserRow, 0)
}

func (s *RowopContext) RowEnd() antlr.TerminalNode {
	return s.GetToken(emarkParserRowEnd, 0)
}

func (s *RowopContext) AllTag() []ITagContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITagContext)(nil)).Elem())
	var tst = make([]ITagContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITagContext)
		}
	}

	return tst
}

func (s *RowopContext) Tag(i int) ITagContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITagContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITagContext)
}

func (s *RowopContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RowopContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RowopContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.EnterRowop(s)
	}
}

func (s *RowopContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.ExitRowop(s)
	}
}

func (p *emarkParser) Rowop() (localctx IRowopContext) {
	localctx = NewRowopContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, emarkParserRULE_rowop)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.Match(emarkParserRow)
	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<emarkParserBlock)|(1<<emarkParserRow)|(1<<emarkParserColumn)|(1<<emarkParserCtx)|(1<<emarkParserNumber)|(1<<emarkParserSpacebar))) != 0 {
		{
			p.SetState(65)
			p.Tag()
		}

		p.SetState(70)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(71)
		p.Match(emarkParserRowEnd)
	}

	return localctx
}

// IBlopContext is an interface to support dynamic dispatch.
type IBlopContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBlopContext differentiates from other interfaces.
	IsBlopContext()
}

type BlopContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlopContext() *BlopContext {
	var p = new(BlopContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = emarkParserRULE_blop
	return p
}

func (*BlopContext) IsBlopContext() {}

func NewBlopContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlopContext {
	var p = new(BlopContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = emarkParserRULE_blop

	return p
}

func (s *BlopContext) GetParser() antlr.Parser { return s.parser }

func (s *BlopContext) Block() antlr.TerminalNode {
	return s.GetToken(emarkParserBlock, 0)
}

func (s *BlopContext) Rows() antlr.TerminalNode {
	return s.GetToken(emarkParserRows, 0)
}

func (s *BlopContext) Spacebar() antlr.TerminalNode {
	return s.GetToken(emarkParserSpacebar, 0)
}

func (s *BlopContext) Columns() antlr.TerminalNode {
	return s.GetToken(emarkParserColumns, 0)
}

func (s *BlopContext) CloseTag() antlr.TerminalNode {
	return s.GetToken(emarkParserCloseTag, 0)
}

func (s *BlopContext) BlockEnd() antlr.TerminalNode {
	return s.GetToken(emarkParserBlockEnd, 0)
}

func (s *BlopContext) AllNumber() []antlr.TerminalNode {
	return s.GetTokens(emarkParserNumber)
}

func (s *BlopContext) Number(i int) antlr.TerminalNode {
	return s.GetToken(emarkParserNumber, i)
}

func (s *BlopContext) AllTag() []ITagContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITagContext)(nil)).Elem())
	var tst = make([]ITagContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITagContext)
		}
	}

	return tst
}

func (s *BlopContext) Tag(i int) ITagContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITagContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITagContext)
}

func (s *BlopContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlopContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlopContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.EnterBlop(s)
	}
}

func (s *BlopContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.ExitBlop(s)
	}
}

func (p *emarkParser) Blop() (localctx IBlopContext) {
	localctx = NewBlopContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, emarkParserRULE_blop)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(73)
		p.Match(emarkParserBlock)
	}
	{
		p.SetState(74)
		p.Match(emarkParserRows)
	}
	p.SetState(76)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == emarkParserNumber {
		{
			p.SetState(75)
			p.Match(emarkParserNumber)
		}

		p.SetState(78)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(80)
		p.Match(emarkParserSpacebar)
	}
	{
		p.SetState(81)
		p.Match(emarkParserColumns)
	}
	p.SetState(83)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == emarkParserNumber {
		{
			p.SetState(82)
			p.Match(emarkParserNumber)
		}

		p.SetState(85)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(87)
		p.Match(emarkParserCloseTag)
	}
	p.SetState(91)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<emarkParserBlock)|(1<<emarkParserRow)|(1<<emarkParserColumn)|(1<<emarkParserCtx)|(1<<emarkParserNumber)|(1<<emarkParserSpacebar))) != 0 {
		{
			p.SetState(88)
			p.Tag()
		}

		p.SetState(93)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(94)
		p.Match(emarkParserBlockEnd)
	}

	return localctx
}

// IColopContext is an interface to support dynamic dispatch.
type IColopContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsColopContext differentiates from other interfaces.
	IsColopContext()
}

type ColopContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyColopContext() *ColopContext {
	var p = new(ColopContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = emarkParserRULE_colop
	return p
}

func (*ColopContext) IsColopContext() {}

func NewColopContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ColopContext {
	var p = new(ColopContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = emarkParserRULE_colop

	return p
}

func (s *ColopContext) GetParser() antlr.Parser { return s.parser }

func (s *ColopContext) Column() antlr.TerminalNode {
	return s.GetToken(emarkParserColumn, 0)
}

func (s *ColopContext) ColumnEnd() antlr.TerminalNode {
	return s.GetToken(emarkParserColumnEnd, 0)
}

func (s *ColopContext) AllTag() []ITagContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITagContext)(nil)).Elem())
	var tst = make([]ITagContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITagContext)
		}
	}

	return tst
}

func (s *ColopContext) Tag(i int) ITagContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITagContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITagContext)
}

func (s *ColopContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ColopContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ColopContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.EnterColop(s)
	}
}

func (s *ColopContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.ExitColop(s)
	}
}

func (p *emarkParser) Colop() (localctx IColopContext) {
	localctx = NewColopContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, emarkParserRULE_colop)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(96)
		p.Match(emarkParserColumn)
	}
	p.SetState(100)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<emarkParserBlock)|(1<<emarkParserRow)|(1<<emarkParserColumn)|(1<<emarkParserCtx)|(1<<emarkParserNumber)|(1<<emarkParserSpacebar))) != 0 {
		{
			p.SetState(97)
			p.Tag()
		}

		p.SetState(102)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(103)
		p.Match(emarkParserColumnEnd)
	}

	return localctx
}

// ICtxContext is an interface to support dynamic dispatch.
type ICtxContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCtxContext differentiates from other interfaces.
	IsCtxContext()
}

type CtxContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCtxContext() *CtxContext {
	var p = new(CtxContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = emarkParserRULE_ctx
	return p
}

func (*CtxContext) IsCtxContext() {}

func NewCtxContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CtxContext {
	var p = new(CtxContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = emarkParserRULE_ctx

	return p
}

func (s *CtxContext) GetParser() antlr.Parser { return s.parser }

func (s *CtxContext) Spacebar() antlr.TerminalNode {
	return s.GetToken(emarkParserSpacebar, 0)
}

func (s *CtxContext) Number() antlr.TerminalNode {
	return s.GetToken(emarkParserNumber, 0)
}

func (s *CtxContext) Ctx() antlr.TerminalNode {
	return s.GetToken(emarkParserCtx, 0)
}

func (s *CtxContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CtxContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CtxContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.EnterCtx(s)
	}
}

func (s *CtxContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(emarkListener); ok {
		listenerT.ExitCtx(s)
	}
}

func (p *emarkParser) Ctx() (localctx ICtxContext) {
	localctx = NewCtxContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, emarkParserRULE_ctx)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(105)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<emarkParserCtx)|(1<<emarkParserNumber)|(1<<emarkParserSpacebar))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}
